[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentopsenv"
version = "1.0.0"
description = "AgentOpsEnv OpenEnv benchmark environment"
authors = [
    {name = "Rahul Giri"}
]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]
